feat(VTA-467): border added

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -216,6 +216,7 @@ min-width: 183.3333pt;
 max-width: 300pt;
 display: table-cell;
 vertical-align: top
+p.solid {border-style: solid;}
 }
 
 .header__three-columns--welsh .header__three-columns-three {
