feat(VTA-467): width increase

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -213,10 +213,9 @@ vertical-align: top
 
 .header__three-columns-three-wide {
 min-width: 183.3333pt;
-max-width: 300pt;
+max-width: 350pt;
 display: table-cell;
-vertical-align: top
-p.solid {border-style: solid;}
+vertical-align: top;
 }
 
 .header__three-columns--welsh .header__three-columns-three {
