--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -200,7 +200,9 @@ vertical-align: top
 }
 
 .header__three-columns-two {
-width: 120.3333pt;
+min-width: 120.3333pt;
+max-width: 200pt;
+padding-right: 20pt;
 display: table-cell;
 vertical-align: top
 }
@@ -213,7 +215,7 @@ vertical-align: top
 
 .header__three-columns-three-wide {
 min-width: 183.3333pt;
-max-width: 350pt;
+max-width: 250pt;
 display: table-cell;
 vertical-align: top;
 }
@@ -256,7 +258,9 @@ width: 90pt
 
 .header__history-left-wide {
 float: left;
-width: 113pt
+min-width: 113pt;
+max-width: 200pt;
+padding-right: 20pt
 }
 
 .header__three-columns--welsh .header__history-left {
