feat(VTA-467): width change

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -200,9 +200,7 @@ vertical-align: top
 }
 
 .header__three-columns-two {
-min-width: 120.3333pt;
-max-width: 200pt;
-padding-right: 20pt;
+width: 120.3333pt;
 display: table-cell;
 vertical-align: top
 }
@@ -258,9 +256,7 @@ width: 90pt
 
 .header__history-left-wide {
 float: left;
-min-width: 113pt;
-max-width: 200pt;
-padding-right: 20pt
+width: 113pt
 }
 
 .header__three-columns--welsh .header__history-left {
