feat(VTA-467): odometer column width increase

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -200,10 +200,10 @@ vertical-align: top
 }
 
 .header__three-columns-two {
-width: 120.3333pt;
+min-width: 120.3333pt;
+max-width: 200pt;
 display: table-cell;
 vertical-align: top
-}
 
 .header__three-columns-three {
 width: 163.3333pt;
