feat(VTA-467): added width

--- a/src/main/resources/assets/stylesheets/cvs-version-1.hbs
+++ b/src/main/resources/assets/stylesheets/cvs-version-1.hbs
@@ -204,6 +204,7 @@ min-width: 120.3333pt;
 max-width: 200pt;
 display: table-cell;
 vertical-align: top
+}
 
 .header__three-columns-three {
 width: 163.3333pt;
@@ -213,9 +214,9 @@ vertical-align: top
 
 .header__three-columns-three-wide {
 min-width: 183.3333pt;
-max-width: 350pt;
+max-width: 250pt;
 display: table-cell;
-vertical-align: top;
+vertical-align: top
 }
 
 .header__three-columns--welsh .header__three-columns-three {
@@ -256,7 +257,8 @@ width: 90pt
 
 .header__history-left-wide {
 float: left;
-width: 113pt
+min-width: 113pt;
+max-width: 200pt
 }
 
 .header__three-columns--welsh .header__history-left {
