--- a/src/main/resources/views/CommercialVehicles/fail.hbs
+++ b/src/main/resources/views/CommercialVehicles/fail.hbs
@@ -98,6 +98,7 @@
                         Vehicle identification number
                         </span>
                         </span>
+                        <span class="heading-info__title-message margin-left-50">{{data.reason}}</span>
                     </h2>
                      <span class="heading-info__content" id="vin">
                          {{failData.rawVin}}
