feat(cb2-6766): refactored reason into object that now takes issuer and date

--- a/src/main/resources/views/CommercialVehicles/pass.hbs
+++ b/src/main/resources/views/CommercialVehicles/pass.hbs
@@ -98,7 +98,7 @@
                         Vehicle identification number
                         </span>
                         </span>
-                        <span class="heading-info__title-message margin-left-50">{{data.reason}}</span>
+                        <span class="heading-info__title-message margin-left-50">{{reissue.reason}}</span>
                     </h2>
                      <span class="heading-info__content" id="vin">
                          {{data.rawVin}}
