--- a/src/main/resources/views/CommercialVehicles/passNoSeatbeltFields.hbs
+++ b/src/main/resources/views/CommercialVehicles/passNoSeatbeltFields.hbs
@@ -98,7 +98,7 @@
                         Vehicle identification number
                         </span>
                         </span>
-                        <span class="heading-info__title-message margin-left-50">{{data.reason}}</span>
+                        <span class="heading-info__title-message margin-left-50">{{reissue.reason}}</span>
                     </h2>
                      <span class="heading-info__content" id="vin">
                          {{data.rawVin}}
