added TRL template and fixed some styles

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -179,6 +179,29 @@ border-bottom: 1px solid black;
 border-right: 1px solid black;
 }
 
+.no_border {
+border-top: none;
+border-left: none;
+border-bottom: none;
+border-right: none;
+}
+
+.border_right {
+border-right: 1px solid black;
+}
+
+.border_left {
+border-left: 1px solid black;;
+}
+
+.border_top{
+border-top: 1px solid black;;
+}
+
+.border_bottom {
+border-bottom: 1px solid black;
+}
+
 .tyre_approval {
 font-size:10px;
 padding: 3px 3px 10px 2px;
@@ -432,6 +455,8 @@ height: 100%;
 }
 
 .empty_div_before_tyre_use{
+padding-left: 10px;
+padding-top: 10px;
 width: 62%;
 }
 
@@ -670,6 +695,10 @@ padding-bottom: 30px;
 height: 100%;
 }
 
+.reissue_department_box {
+    padding: 10px 0 0 0
+}
+
 .vtg6_tyre_condition {
 font-size: 10px;
 height: 100%;
@@ -768,4 +797,12 @@ padding-left: 8px;
 
 .vtg6_dvsa p {
 padding-bottom: 10px;
+}
+
+.w-175{
+  width: 175px
+}
+
+.w-30 {
+width: 30px
 }
