--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -9,6 +9,13 @@
     </head>
 
     <body>
+        <table id="letter-heading-logos">
+            <tr>
+                <td class="left-logo"><img src="{{root}}/assets/images/dva-logo.png" alt="DVA logo" width="378"/></td>
+                <td class="right-logo"><img src="{{root}}/assets/images/dvsa-crest-small.png" alt="DVSA logo" width="378"/></td>
+            </tr>
+        </table>
+
         <table id="letter-heading">
             <tbody>
                 <tr>
@@ -39,7 +46,7 @@
         </table>
 
         <p id="letter-subject">
-            {{#if paragraphId == 4}}
+            {{#if (eq paragraphId 4)}}
                 Refusal to issue a consent to supply a large trailer for use on the road
             {{else}}
                 Consent to supply a large trailer for use on the road
@@ -49,14 +56,14 @@
         <table id="vehicle-information">
             <tbody>
                 <tr id="vin"><td>Vehicle Identification Number:</td><td>{{vin}}</td></tr>
-                {{#if paragraphId != 4}}
+                {{#if (neq paragraphId 4)}}
                     <tr id="type-approval-number"><td>Type Approval Number (If applicable):</td><td>{{typeApprovalNumber}}</td></tr>
                     <tr id="trailerId"><td>The Trailer ID Number allocated to the trailer is:</td><td>{{trailerId}}</td></tr>
                 {{/if}}
             </tbody>
         </table>
 
-        {{#if paragraphId == 3}}
+        {{#if (eq paragraphId 3)}}
         <p id="paragraph-3">
             On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23  we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain or Northern Ireland.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
@@ -64,13 +71,13 @@
         </p>
         {{/if}}
 
-        {{#if paragraphId == 4}}
+        {{#if (eq paragraphId 4)}}
         <p id="paragraph-4">
             On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23, we hereby refuse consent to the supply of the trailer having the above identification numbers for use on a road.
         </p>
         {{/if}}
 
-        {{#if paragraphId == 5}}
+        {{#if (eq paragraphId 5)}}
         <p id="paragraph-5">
             On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23, we hereby give consent to the supply of the trailer having the above identification numbers for use on a road.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
@@ -80,7 +87,7 @@
         </p>
         {{/if}}
 
-        {{#if paragraphId == 6}}
+        {{#if (eq paragraphId 6)}}
         <p id="paragraph-6">
             On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23 we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain only.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
@@ -88,7 +95,7 @@
         </p>
         {{/if}}
 
-        {{#if paragraphId == 7}}
+        {{#if (eq paragraphId 7)}}
         <p id="paragraph-7">
             On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23  we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in <strong>Northern Ireland</strong> only.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
@@ -98,7 +105,7 @@
 
         <p id="footer">
         Yours faithfully
-        <img src="{{root}}/assets/images/signature-ceo-loveday-ryder.png" alt="CEO Loveday Ryder" width="114"/>
+        <img id="letter-signature" src="{{root}}/assets/images/signature-ceo-loveday-ryder.png" alt="CEO Loveday Ryder" width="114"/>
         Loveday Ryder<br/>
         Chief Executive Officer
         </p>
