removed erroneous curly brackets in the applicants addrees

--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -20,11 +20,11 @@
             <tbody>
                 <tr>
                     <td colspan="3" id="applicants-details">
-                        {{#if applicantDetails.name}}{{applicantDetails.name}}}<br>{{/if}}
-                        {{#if applicantDetails.street}}{{applicantDetails.street}}}<br>{{/if}}
-                        {{#if applicantDetails.town}}{{applicantDetails.town}}}<br>{{/if}}
-                        {{#if applicantDetails.city}}{{applicantDetails.city}}}<br>{{/if}}
-                        {{#if applicantDetails.postcode}}{{applicantDetails.postcode}}}<br>{{/if}}
+                        {{#if applicantDetails.name}}{{applicantDetails.name}}<br>{{/if}}
+                        {{#if applicantDetails.street}}{{applicantDetails.street}}<br>{{/if}}
+                        {{#if applicantDetails.town}}{{applicantDetails.town}}<br>{{/if}}
+                        {{#if applicantDetails.city}}{{applicantDetails.city}}<br>{{/if}}
+                        {{#if applicantDetails.postcode}}{{applicantDetails.postcode}}<br>{{/if}}
                     </td>
                     <td id="office-details">
                         Trailer Section<br>
@@ -105,7 +105,7 @@
 
         <p id="footer">
         Yours faithfully
-        <img id="letter-signature" src="{{root}}/assets/images/signature-ceo-loveday-ryder.png" alt="CEO Loveday Ryder" width="114"/>
+        <img id="letter-signature" src="{{root}}/assets/images/signature-ceo-loveday-ryder.png" alt="DVSA CEO Loveday Ryder's signature" width="114"/>
         Loveday Ryder<br/>
         Chief Executive Officer
         </p>
