fixes last unit test failure

--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -65,9 +65,8 @@
 
         {{#if (eq paragraphId 3)}}
         <p id="paragraph-3">
-            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23  we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain or Northern Ireland.<br/><br/>
+            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23, we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain or Northern Ireland.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
-            To check the authenticity of this document, please contact the above number quoting the trailer ID number.
             To check the authenticity of this document, please contact the above number quoting the trailer ID number.
         </p>
         {{/if}}
@@ -90,7 +89,7 @@
 
         {{#if (eq paragraphId 6)}}
         <p id="paragraph-6">
-            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23 we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain only.<br/><br/>
+            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23, we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in Great Britain only.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
             To check the authenticity of this document, please contact the above number quoting the trailer ID number.<br/><br/>
         </p>
@@ -98,7 +97,7 @@
 
         {{#if (eq paragraphId 7)}}
         <p id="paragraph-7">
-            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23  we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in <strong>Northern Ireland</strong> only.<br/><br/>
+            On behalf of the UK approval authority and pursuant to the Road Vehicles (Approval) Regulations 2020, Chapter 2, Regulation 23, we hereby give consent to the supply of the trailer having the above identification numbers for use on a road in <strong>Northern Ireland</strong> only.<br/><br/>
             Please ensure that the allocated identification number is permanently marked in a conspicuous position on the nearside, on the chassis or a fixed component.<br/><br/>
             To check the authenticity of this document, please contact the above number quoting the trailer ID number.<br/><br/>
         </p>
