swapped agency logo positions

--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -11,8 +11,8 @@
     <body>
         <table id="letter-heading-logos">
             <tr>
-                <td class="left-logo"><img src="{{root}}/assets/images/dva-logo.png" alt="DVA logo" width="378"/></td>
-                <td class="right-logo"><img src="{{root}}/assets/images/dvsa-crest-small.png" alt="DVSA logo" width="378"/></td>
+                <td class="left-logo"><img src="{{root}}/assets/images/dvsa-crest-small.png" alt="DVSA logo" width="378"/></td>
+                <td class="right-logo"><img src="{{root}}/assets/images/dva-logo.png" alt="DVA logo" width="378"/></td>
             </tr>
         </table>
 
