feat(cb2-5716): trailer into service - data contract changes

--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -57,7 +57,7 @@
             <tbody>
                 <tr><td>Vehicle Identification Number:</td><td id="vin">{{vin}}</td></tr>
                 {{#if (neq paragraphId 4)}}
-                    <tr><td>Type Approval Number (If applicable):</td><td id="type-approval-number">{{typeApprovalNumber}}</td></tr>
+                    <tr><td>Type Approval Number (If applicable):</td><td id="type-approval-number">{{approvalTypeNumber}}</td></tr>
                     <tr><td>The Trailer ID Number allocated to the trailer is:</td><td id="trailer-id">{{trailerId}}</td></tr>
                 {{/if}}
             </tbody>
