feat(cb2-7048): update applicant detials model

--- a/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
+++ b/src/main/resources/views/CommercialVehicles/TrailerIntoService.hbs
@@ -21,10 +21,11 @@
                 <tr>
                     <td id="applicant-details">
                         {{#if applicantDetails.name}}<span class="name">{{applicantDetails.name}}</span>{{/if}}
-                        {{#if applicantDetails.street}}<span class="street">{{applicantDetails.street}}</span>{{/if}}
-                        {{#if applicantDetails.town}}<span class="town">{{applicantDetails.town}}</span>{{/if}}
-                        {{#if applicantDetails.city}}<span class="city">{{applicantDetails.city}}</span>{{/if}}
-                        {{#if applicantDetails.postcode}}<span class="postcode">{{applicantDetails.postcode}}</span>{{/if}}
+                        {{#if applicantDetails.address1}}<span class="address1">{{applicantDetails.address1}}</span>{{/if}}
+                        {{#if applicantDetails.address2}}<span class="address2">{{applicantDetails.address2}}</span>{{/if}}
+                        {{#if applicantDetails.postTown}}<span class="postTown">{{applicantDetails.postTown}}</span>{{/if}}
+                        {{#if applicantDetails.address3}}<span class="address3">{{applicantDetails.address3}}</span>{{/if}}
+                        {{#if applicantDetails.postCode}}<span class="postCode">{{applicantDetails.postCode}}</span>{{/if}}
                     </td>
                     <td id="office-details">
                         Trailer Section<br/>
