--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
@@ -591,7 +591,7 @@
                                     <p>Date of Issue</p>
                                 </div>
                                 <div class="inline_elem_child issue_date">
-                                    <p id="plateIssueDate">{{plateData.plateIssueDate}}</p>
+                                    <p id="plateIssueDate">{{formatIsoDate plateData.plateIssueDate}}</p>
                                 </div>
                             </div>
                             <div class="inline_elem black_square_container">
@@ -880,7 +880,7 @@
                                     DEPARTMENT FOR
                                 </p>
                                 <p class="department_data">
-                                    [{{plateData.plateIssueDate}}]
+                                    [{{formatIsoDate plateData.plateIssueDate}}]
                                 </p>
                                 <p class="department_for">
                                     TRANSPORT
