fix(cb2-7832): adds eec axle weights to trailer ministry plate

--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
@@ -159,7 +159,12 @@
                     <span class="inline_elem_child weight_title">Weights not to be exceeded in Gt. Britain</span>
                 </div>
             </td>
-            <td rowspan="2" class="no_border_left_top align_top width_25 gray_box">
+            <td rowspan="2" class="no_border_left_top align_top width_25">
+                <div class="inline_elem">
+                    <span class="inline_elem_child weight_numbering"> (3) </span>
+                    <span class="inline_elem_child weight_title">EEC Maximum permitted weights</span>
+                </div>
+                <p class="weight_notes">(See note 8)</p>
             </td>
             <td colspan="2" rowspan="2" class="no_border_left_top align_top width_25">
                 <div class="inline_elem">
@@ -318,7 +323,14 @@
                     <br/>
                 {{/if}}
             </td>
-            <td class="no_border_left_top axle_data gray_box">
+            <td class="no_border_left_top axle_data">
+                {{#if plateData.axles.axle1.weights.eecWeight}}
+                    <p class="centered_data">
+                        <strong id="axle1_eecWeight">{{plateData.axles.axle1.weights.eecWeight}}</strong>
+                    </p>
+                {{else}}
+                    <br/>
+                {{/if}}
             </td>
             <td colspan="2" class="no_border_left_top axle_data">
                 {{#if plateData.axles.axle1.weights.designWeight}}
@@ -370,7 +382,14 @@
                     <br/>
                 {{/if}}
             </td>
-            <td class="no_border_left_top axle_data gray_box">
+            <td class="no_border_left_top axle_data">
+                {{#if plateData.axles.axle2.weights.eecWeight}}
+                    <p class="centered_data">
+                        <strong id="axle2_eecWeight">{{plateData.axles.axle2.weights.eecWeight}}</strong>
+                    </p>
+                {{else}}
+                    <br/>
+                {{/if}}
             </td>
             <td colspan="2" class="no_border_left_top axle_data">
                 {{#if plateData.axles.axle2.weights.designWeight}}
@@ -422,7 +441,14 @@
                     <br/>
                 {{/if}}
             </td>
-            <td class="no_border_left_top axle_data gray_box">
+            <td class="no_border_left_top axle_data">
+                {{#if plateData.axles.axle3.weights.eecWeight}}
+                    <p class="centered_data">
+                        <strong id="axle3_eecWeight">{{plateData.axles.axle3.weights.eecWeight}}</strong>
+                    </p>
+                {{else}}
+                    <br/>
+                {{/if}}
             </td>
             <td colspan="2" class="no_border_left_top axle_data">
                 {{#if plateData.axles.axle3.weights.designWeight}}
@@ -474,7 +500,14 @@
                     <br/>
                 {{/if}}
             </td>
-            <td class="no_border_left_top axle_data gray_box">
+            <td class="no_border_left_top axle_data">
+                {{#if plateData.axles.axle4.weights.eecWeight}}
+                    <p class="centered_data">
+                        <strong id="axle4_eecWeight">{{plateData.axles.axle4.weights.eecWeight}}</strong>
+                    </p>
+                {{else}}
+                    <br/>
+                {{/if}}
             </td>
             <td colspan="2" class="no_border_left_top axle_data">
                 {{#if plateData.axles.axle4.weights.designWeight}}
