fix(cb2-7832): adds more eec axle weights cells to trailer ministry plate

--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
@@ -841,7 +841,10 @@
                             <strong id="grossGbWeight">{{plateData.grossGbWeight}}</strong>
                         </p>
                     </td>
-                    <td class="no_border_left_top align_middle gray_box">
+                    <td class="no_border_left_top align_middle">
+                        <p class="centered_data">
+                            <strong id="grossEecWeight">{{plateData.grossEecWeight}}</strong>
+                        </p>
                     </td>
                     <td colspan="2" class="no_border_left_top align_middle">
                         <p class="centered_data">
@@ -869,7 +872,10 @@
                             <strong id="trainGbWeight">{{plateData.trainGbWeight}}</strong>
                         </p>
                     </td>
-                    <td class="no_border_left_top align_middle gray_box">
+                    <td class="no_border_left_top align_middle">
+                        <p class="centered_data">
+                            <strong id="trainEecWeight">{{plateData.trainEecWeight}}</strong>
+                        </p>
                     </td>
                     <td colspan="2" class="no_border_left_top align_middle">
                         <p class="centered_data">
@@ -897,7 +903,10 @@
                             <strong id="maxTrainGbWeight">{{plateData.maxTrainGbWeight}}</strong>
                         </p>
                     </td>
-                    <td class="no_border_left_top align_middle gray_box">
+                    <td class="no_border_left_top align_middle">
+                        <p class="centered_data">
+                            <strong id="maxTrainEecWeight">{{plateData.maxTrainEecWeight}}</strong>
+                        </p>
                     </td>
                     <td colspan="2" class="no_border_left_top gray_box">
                     </td>
