fix(cb2-0000): adds deleted notes 6-8 to page 2 (reverse of plate)

--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
@@ -1336,7 +1336,11 @@
                 <li>If the last letter in the function box is &lsquo;R&rsquo; road friendly suspension is fitted</li>
                 <li>All weight shown are subject to the fitting of correct tyres</li>
                 <li>The weight applies to combined transport operations.</li>
-                <li style="list-style-type: none;">(6-8 deleted)</li>
+                <li>This dimension only applies to drawn vehicles of trailers and semi-trailers</li>
+                <li>This dimension only applies to trailer and semi-trailers</li>
+                <li>Where there is no weight shown in the EEC maximum permitted weights column this is because there is no
+                    EEC standard relating to that weight.
+                </li>
             </ol>
             <p><strong>NOTIFIABLE ALTERATIONS </strong></p>
             <ol start="9">
