fix(cb2-7890): vtg6-7 plates typo of 'tyre approval' to 'type approval'

--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
@@ -72,7 +72,7 @@
                 </tr>
                 <tr>
                     <td colspan="13" class="no_border_top align_top">
-                        <p class="tyre_approval">Tyre Approval No. &nbsp; <strong
+                        <p class="tyre_approval">Type Approval No. &nbsp; <strong
                                 id="approvalTypeNumber">{{plateData.approvalTypeNumber}}</strong></p>
                     </td>
                 </tr>
@@ -759,7 +759,7 @@
                 </tr>
                 <tr>
                     <td colspan="13" class="no_border_top align_top">
-                        <p class="tyre_approval">Tyre Approval No. &nbsp; <strong
+                        <p class="tyre_approval">Type Approval No. &nbsp; <strong
                                 id="approvalTypeNumber">{{plateData.approvalTypeNumber}}</strong></p>
                     </td>
                 </tr>
