notes page margin tweaks

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -806,3 +806,8 @@ padding-bottom: 10px;
 .w-30 {
 width: 30px
 }
+
+.secondPage > p, .secondPage > ol {
+margin-top: .25em;
+margin-bottom: 0.25em;
+}
