missing notes cont box, vtg6a page width fix

--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7_TRL.hbs
@@ -1238,10 +1238,31 @@
                             <li>
                                 The weight applies to combined transport operations
                             </li>
+                            <li>
+                                This dimension only applies to drawn vehicles of
+                                trailers and semi - trailers
+                            </li>
                         </ol>
                     </td>
-                    <td colspan="5" class="no_border_top align_top notes_cont gray_box">
-
+                    <td colspan="5" class="no_border_top align_top notes_cont">
+                        <p class="notes_cont_title">
+                            <strong>NOTES (Cont’d)</strong>
+                        </p>
+                        <ol start="7">
+                            <li>
+                                This dimension only applies to trailer and semi-
+                                trailers
+                            </li>
+                            <li>
+                                Where there is no weight shown in the EEC maximum
+                                permitted weights column this is because there is no EEC
+                                standard relating to that weight.
+                            </li>
+                        </ol>
+                        <p class="notes_nb">
+                            N.B All weights in Kilograms – all dimensions in
+                            Millimetres
+                        </p>
                     </td>
                 </tr>
                 </tbody>
