--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -610,7 +610,7 @@ margin: auto;
 }
 
 .secondPage {
-width: 545px;
+width: 400px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
@@ -749,40 +749,38 @@ padding-left: 20px;
 width: 80%;
 }
 
-.vtg6_secondPage {
-width: 470px;
+.vtg7_secondPage {
 height: 775px;
-margin-left: 10px;
-margin-right: 10px;
-margin-top: 10px;
-font-size: 10px;
+width: 535px;
+border-collapse:collapse;
+border:none;
 }
 
-.vtg6_secondPage ol {
+.vtg7_secondPage ol {
 padding-left: 20px;
 padding-bottom: 10px;
 font-size: 15px;
 }
 
-.vtg6_secondPage li {
+.vtg7_secondPage li {
 padding-left: 10px;
 padding-bottom: 5px;
 }
 
-.vtg6_display {
+.vtg7_display {
 text-align: center;
 font-size: 15px;
 font-weight: bold;
 padding-bottom: 20px;
 }
 
-.vtg6_loss {
+.vtg7_loss {
 font-size: 15px;
 font-weight: bold;
 text-align: center;
 }
 
-.vtg6_securely_affixed {
+.vtg7_securely_affixed {
 padding-bottom: 5px;
 }
 
@@ -790,12 +788,12 @@ padding-bottom: 5px;
 list-style-type: lower-alpha;
 }
 
-.vtg6_dvsa {
+.vtg7_dvsa {
 font-size: 15px;
 padding-left: 8px;
 }
 
-.vtg6_dvsa p {
+.vtg7_dvsa p {
 padding-bottom: 10px;
 }
 
