fix(cb2-7678): added margins back in to vtg7 page

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -750,10 +750,12 @@ width: 80%;
 }
 
 .vtg7_secondPage {
-height: 775px;
 width: 535px;
-border-collapse:collapse;
-border:none;
+height: 775px;
+margin-left: 10px;
+margin-right: 10px;
+margin-top: 10px;
+font-size: 10px;
 }
 
 .vtg7_secondPage ol {
