fix(cb2-7678): added padding and max width

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -42,7 +42,6 @@ height: 775px;
 width: 535px;
 border-collapse:collapse;
 border:none;
-margin-right: 5px;
 }
 
 .vtg6 {
@@ -50,6 +49,7 @@ width: 400px;
 height: 640px;
 border-collapse:collapse;
 border:none;
+padding: 10px;
 }
 
 .logo {
@@ -611,7 +611,7 @@ margin: auto;
 }
 
 .secondPage {
-width: 400px;
+max-width: 400px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
