--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -50,6 +50,7 @@ width: 400px;
 height: 640px;
 border-collapse:collapse;
 border:none;
+padding: 10px;
 }
 
 .logo {
@@ -611,7 +612,8 @@ margin: auto;
 }
 
 .secondPage {
-width: 400px;
+
+max-width: 400px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
