fix(cb2-7678): more extreme width for second page

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -31,6 +31,7 @@ line-height: 1
 
 .table-half {
     width: 47%;
+    padding: 2px;
 }
 
 .gap {
@@ -610,7 +611,7 @@ margin: auto;
 }
 
 .secondPage {
-width: 300px;
+width: 200px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
