--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -31,7 +31,6 @@ line-height: 1
 
 .table-half {
     width: 47%;
-    padding: 2px;
 }
 
 .gap {
@@ -46,7 +45,7 @@ border:none;
 }
 
 .vtg6 {
-width: 400px;
+width: 395px;
 height: 640px;
 border-collapse:collapse;
 border:none;
@@ -611,7 +610,7 @@ margin: auto;
 }
 
 .secondPage {
-width: 200px;
+width: 80%;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
