fix(cb2-7678): attempt at fixing formatting

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -811,3 +811,11 @@ width: 30px
 margin-top: .25em;
 margin-bottom: 0.25em;
 }
+
+.table-half-left {
+width: 57%
+}
+
+.table-width-right {
+width: 37%
+}
