--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -49,6 +49,7 @@ width: 400px;
 height: 640px;
 border-collapse:collapse;
 border:none;
+padding-right: 2px;
 }
 
 .logo {
@@ -610,7 +611,7 @@ margin: auto;
 }
 
 .secondPage {
-max-width: 300px;
+max-width: 400px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
@@ -750,7 +751,7 @@ width: 80%;
 }
 
 .vtg6_secondPage {
-width: 470px;
+width: 535px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
@@ -810,12 +811,4 @@ width: 30px
 .secondPage > p, .secondPage > ol {
 margin-top: .25em;
 margin-bottom: 0.25em;
-}
-
-.table-half-left {
-width: 57%
-}
-
-.table-width-right {
-width: 37%
 }
