--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
@@ -1272,7 +1272,7 @@
 </div>
 <div class="separatePage">
 <table>
-    <td class='table-half-left'>
+    <td class='table-half'>
         <div class="vtg6_secondPage">
             <p class="vtg6_display">
                 DISPLAY OF MINISTRY PLATE
@@ -1324,7 +1324,7 @@
             </div>
         </div>
     </td>
-    <td class='table-half-right'>
+    <td class='table-half'>
         <div class="secondPage">
             <p class="notes_title">NOTES</p>
             <p><strong>PLATED WEIGHTS</strong></p>
