--- a/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
+++ b/src/main/resources/views/CommercialVehicles/VTG6_VTG7.hbs
@@ -1324,7 +1324,7 @@
             </div>
         </div>
     </td>
-    <td class='table-half-right'>
+    <td class='table-half'>
         <div class="secondPage">
             <p class="notes_title">NOTES</p>
             <p><strong>PLATED WEIGHTS</strong></p>
