--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -260,7 +260,7 @@ font-size: 10px;
 }
 
 .function_code_data {
-margin-left:50px;
+margin-left:20px;
 font-weight: bold;
 font-size: 12px;
 }
@@ -749,40 +749,41 @@ padding-left: 20px;
 width: 80%;
 }
 
-.vtg7_secondPage {
+.vtg6_secondPage {
 width: 525px;
 height: 775px;
 margin-left: 10px;
 margin-right: 10px;
 margin-top: 10px;
+padding-right: 50px;
 font-size: 10px;
 }
 
-.vtg7_secondPage ol {
+.vtg6_secondPage ol {
 padding-left: 20px;
 padding-bottom: 10px;
 font-size: 15px;
 }
 
-.vtg7_secondPage li {
+.vtg6_secondPage li {
 padding-left: 10px;
 padding-bottom: 5px;
 }
 
-.vtg7_display {
+.vtg6_display {
 text-align: center;
 font-size: 15px;
 font-weight: bold;
 padding-bottom: 20px;
 }
 
-.vtg7_loss {
+.vtg6_loss {
 font-size: 15px;
 font-weight: bold;
 text-align: center;
 }
 
-.vtg7_securely_affixed {
+.vtg6_securely_affixed {
 padding-bottom: 5px;
 }
 
@@ -790,12 +791,12 @@ padding-bottom: 5px;
 list-style-type: lower-alpha;
 }
 
-.vtg7_dvsa {
+.vtg6_dvsa {
 font-size: 15px;
 padding-left: 8px;
 }
 
-.vtg7_dvsa p {
+.vtg6_dvsa p {
 padding-bottom: 10px;
 }
 
