fix(cb2-7876): more margin changes

--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -613,6 +613,7 @@ margin: auto;
 .secondPage {
 width: 535px;
 height: 775px;
+margin-left: 20px;
 margin-right: 10px;
 margin-top: 10px;
 font-size: 10px;
@@ -753,7 +754,7 @@ width: 80%;
 width: 400px;
 height: 775px;
 margin-left: 10px;
-margin-right: 30px;
+margin-right: 10px;
 margin-top: 10px;
 font-size: 10px;
 }
