--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -613,6 +613,7 @@ margin: auto;
 .secondPage {
 width: 535px;
 height: 775px;
+margin-left: 20px;
 margin-right: 10px;
 margin-top: 10px;
 font-size: 10px;
