--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -613,10 +613,9 @@ margin: auto;
 .secondPage {
 width: 535px;
 height: 775px;
-margin-left: 20px;
 margin-right: 10px;
 margin-top: 10px;
-padding: right 10px;
+padding-left: 30px;
 font-size: 10px;
 }
 
