--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -616,6 +616,7 @@ height: 775px;
 margin-left: 20px;
 margin-right: 10px;
 margin-top: 10px;
+padding-left: 30px;
 font-size: 10px;
 }
 
@@ -754,7 +755,6 @@ width: 80%;
 width: 400px;
 height: 775px;
 margin-left: 10px;
-margin-right: 30px;
 margin-top: 10px;
 padding-right: 50px;
 font-size: 10px;
