--- a/src/main/resources/assets/stylesheets/plates.hbs
+++ b/src/main/resources/assets/stylesheets/plates.hbs
@@ -1,6 +1,6 @@
 @page {
     size: A4 landscape;
-    margin: 4px 12px 0 12px;
+    margin: 20px 24px 0 24px;
     padding: 0;
 }
 
@@ -30,11 +30,11 @@ span {
     font-family: "Calibri", sans-serif;
 }
 
-.separatePage {
-<!--    page-break-after: always;-->
+.separate-page {
+    page-break-after: always;
 }
 
-.separatePage > table {
+.separate-page > table {
     width: 100%;
 }
 
@@ -46,12 +46,17 @@ span {
     width: 2%;
 }
 
+.vtg6.notes,
+.vtg7.notes {
+    padding-right: 20px;
+}
+
 .vtg6.notes {
     font-size: 15px;
 }
 
 .vtg7.notes {
-    font-size: 9px;
+    font-size: 10px;
 }
 
 .vtg6.notes > p,
@@ -211,26 +216,31 @@ span {
     border-right: 1px solid black;
 }
 
-.tyre_approval {
+.type_approval {
     font-size: 10px;
-    padding: 3px 3px 10px 2px;
+    padding: 3px;
 }
 
-.tyre_approval strong {
+.type_approval strong {
     font-size: 13px;
 }
 
-.manufacturer {
-    padding-left: 3px;
-    padding-right: 3px;
-    padding-bottom: 13px;
+.manufacturer,
+.speed_limiter,
+.year_of_manufacture {
+    padding: 3px;
 }
 
-.manufacturer p {
+.manufacturer p,
+.speed_limiter p,
+.year_of_manufacture p {
     font-size: 10px;
+    padding: 0px;
 }
 
-.manufacturer_data {
+.manufacturer_data,
+.speed_limiter_data,
+.year_of_manufacture_data {
     font-weight: bold;
     vertical-align: middle;
     font-size: 12px;
@@ -241,21 +251,23 @@ span {
 }
 
 .manufacturer_model_container {
-    width: 20%;
+    width: 30%;
 }
 
-.speed_limiter {
-    padding-left: 5px;
-}
-
-.speed_limiter p {
+.speed_limiter_container,
+.year_of_manufacture_container {
     font-size: 10px;
+    width: 75%;
 }
 
-.speed_limiter_data {
-    margin-left: 50px;
-    font-weight: bold;
-    font-size: 13px;
+.speed_limiter_data_container,
+.year_of_manufacture_data_container {
+    width: 24%;
+}
+
+.year_of_manufacture_data_container {
+    padding-top: 5px;
+    text-align: center;
 }
 
 .function_code {
@@ -290,18 +302,7 @@ span {
     white-space: nowrap;
 }
 
-.manufacture_year {
-    padding-left: 3px;
-    padding-bottom: 5px;
-    padding-top: 5px;
-}
-
-.manufacture_year p {
-    font-size: 10px;
-}
-
 .manufacture_year_data {
-    margin-left: 30px;
     font-weight: bold;
     font-size: 12px;
 }
