--- a/src/main/resources/assets/stylesheets/iva-30-fail.hbs
+++ b/src/main/resources/assets/stylesheets/iva-30-fail.hbs
@@ -1,70 +1,123 @@
-.separate-page {
-    page-break-after: always;
-}
+
 @page {
-    size: A4 portrait;
-    margin: 20px 24px 0 24px;
-    padding: 0;
+size: A4 portrait;
+margin: 20px 24px 0 24px;
+padding: 0;
 }
 
-p { margin:2px; }
+p { margin:5px; }
+
+p,
+div,
+span {
+font-family: "Calibri", sans-serif;
+}
+
+h1 {
+font-size: 100%;
+}
 
 html,
 body {
-    line-height: 1;
-    margin: 0;
-    -fs-page-sequence: start;
-    page-break-inside: avoid;
-    font-size: 85%;
+line-height: 1;
+margin: 0;
+-fs-page-sequence: start;
+page-break-inside: avoid;
+font-size: 90%;
 }
 
 *,
 :after,
 :before {
-    box-sizing: border-box;
-    line-height: 1;
+box-sizing: border-box;
+line-height: 1;
 }
 
+.separate-page {
+page-break-after: always;
+}
 .section-border {
-    border-style: solid;
-    border-color: black grey grey grey;
-    padding-bottom: 20px;
+border-style: solid;
+border-color: black grey grey grey;
+margin-bottom: 5px;
 }
 
 .section-title-border {
-    border-style: solid;
-    border-color: black;
-    background-color: grey;
-    font-weight:bold;
-    text-align: center;
-    margin-left: -2px;
-    margin-top: -2px;
+border-style: solid;
+border-color: black;
+background-color: grey;
+font-weight:bold;
+text-align: center;
+margin-left: -2px;
+margin-top: -2px;
 }
 
 .section-title-border h1 {
-    margin: 0px;
-    padding: 0px;
+margin: 0px;
+padding: 0px;
 }
 
 .section-text-wrapper {
-    padding: 10px 10px 10px 3px;
+padding: 3px;
 }
 
 .exam-list {
-    width: 100%;
-}
-
-.exam-list li {
-    transform: rotate(45deg);
-    list-style-type: square
+width: 100%;
 }
 
 #left-exam-list {
-    float: left;
-    width: 50%;
+float: left;
+width: 50%;
 }
 
 #right-exam-list {
-    float: right;
-    width: 50%;
+float: right;
+width: 50%;
+}
+
+.footer {
+width: 100%;
+}
+
+#footer-left {
+float: left;
+text-align: left;
+width: 50%;
+}
+
+#footer-right {
+float: right;
+text-align: right;
+width: 40%;
+}
+
+#no-margin-p {
+margin: 0px;
+}
+
+.bold-title {
+font-size: 1.5em;
+}
+
+.vehicle-section-list {
+margin-top: 0px;
+padding-top: 0px;
+list-style-type: none;
+}
+.item-list {
+margin-left: 50px;
+margin-bottom: 0px;
+}
+
+.item-list li {
+white-space: pre-wrap;
+}
+
+.refusal-list {
+clear: both;
+}
+
+.refusal-list p {
+margin: 0px;
+clear: both;
 }
